# handwriting-HGF

./: .gitignore  inference.py  pyproject.toml  report.md  run_preprocess.py  setup.ps1  setup.sh
scripts/: BLIP.ipynb  TrOCR.ipynb  finetune_BLIP.py  finetune_TrOCR.py  train_mask_rcnn.py  update_dataset.ps1  update_dataset.sh
utils/: latex.py  preprocess.py
